<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AYP FM</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="nav_1">ACCUEIL</string>
    <string name="nav_2">QUI SOMMES-NOUS?</string>
    <string name="nav_3">RADIO EN LIVE</string>
    <string name="nav_4">VIDÉO AYPFM</string>
    <string name="nav_5">NOS ANNONCES</string>
    <string name="nav_6">ALLER SUR AYPFM</string>
    <string name="nav_7">CONTACTEZ NOUS</string>
    <string name="press_again">Press again to exit</string>
    <string name="banner_text">Circuits accompagnés en Arménie\nwww.voyage<b>en</b>armenie.com</string>

</resources>